force-app/main/default/objects/RCA_Comparison_Object__mdt/RCA_Comparison_Object__mdt.object-meta.xml
<CustomObject>
    <label>RCA Comparison Object</label>
    <pluralLabel>RCA Comparison Objects</pluralLabel>
    <description>Configuration for objects to include in the Quote Comparison Tool</description>
</CustomObject>