force-app/main/default/objects/RCA_Comparison_Object__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Numeric value to control the display order of sections in the comparison view</description>
</CustomField>