force-app/main/default/objects/RCA_Comparison_Object__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>The API name of the object to include in comparison (e.g., Quote, Opportunity, QuoteLineItem)</description>
</CustomField>