force-app/main/default/objects/RCA_Comparison_Object__mdt/fields/Parent_Identifier_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Identifier_Field__c</fullName>
    <label>Parent Identifier Field</label>
    <length>255</length>
    <type>Text</type>
    <description>For grandchild objects, the field that identifies the direct parent (e.g., QuoteLineItemId for line item attributes)</description>
</CustomField>