force-app/main/default/objects/RCA_Comparison_Object__mdt/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
    <description>The field name that links to the parent object (e.g., OpportunityId for Opportunity relationship)</description>
</CustomField>